refactor(dfd): refactor get characteristic values for pin